--- a/about_me/about_me.css
+++ b/about_me/about_me.css
@@ -6,13 +6,22 @@
     box-sizing: border-box;
 }
 
+#about_me{
+  width: 100vw;
+  height: 100vh;
+  /* background: rosybrown; */
+}
+
 .about_me{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* background: rgb(140, 206, 241); */
-  background: rgb(67, 173, 243);
+  /* background: rgb(140, 206, 241); */ /* azul-claro */
+  /* background: rgb(67, 173, 243); */ /* azul-mas oscuro */
+ /*  background: rgb(24, 52, 146); */
+  background:rgb(12, 35, 98);
+  overflow: hidden;
   width: 100vw;
   height: 100vh;
   color: white;
@@ -53,7 +62,8 @@
 }
 .container_text a{
   text-decoration: none; 
-  color: rgb(0, 17, 255);
+  color: #ffe221;
+  /* color: rgb(0, 17, 255); */
 }
 .container_text a:hover{
     color: rgba(129, 141, 163, 0.7);
@@ -148,3 +158,126 @@
     font-size: 2rem;
   }
 }
+
+/* --------------ROCKET------------------- */
+
+@keyframes flicker {
+  0% {
+    transform: rotate(-1deg);
+  }
+  20% {
+    transform: rotate(3deg) scaleY(1.05);
+  }
+  60% {
+    transform: rotate(1deg);
+  }
+  80% {
+    transform: rotate(-1deg) scaleY(0.9);
+  }
+  100% {
+    transform: rotate(4deg);
+  }
+}
+
+@keyframes rocket_launch {
+  to{
+    transform: translateY(-1200px);
+  }
+}
+
+@keyframes flame {
+  0%{
+    opacity: 1;
+  }
+  to{
+    opacity: 0.6;
+    transform: translateY(-1200px)
+  }
+}
+
+
+.container_rocket {
+  /* background: rgba(255, 0, 0, 0.452); */
+  position: absolute;
+  bottom:.5rem;
+  right: .5rem;
+  width: 90px;
+  height: 100px;
+}
+
+.rocket {
+  width: 90px;
+  height: 100px;
+  position: absolute;
+  z-index: 3;
+  animation: rocket_launch 15s 7s infinite ;
+}
+
+.rocket-wrapper {
+ /*  background: rgba(187, 188, 143, 0.671); */
+  position: absolute;
+  width: 90px;
+  height: 100px;
+  top: 0;
+  left: 0;
+  transition: 4s ease;
+  pointer-events: none;
+}
+
+
+.rocket-wrapper .flame-wrapper {
+  position: absolute;
+  opacity: 0;
+  transition: 250ms ease;
+  animation: flame 15s 7s infinite;
+}
+.flame-wrapper{
+  width: 50px;
+  height: 50px;
+  left: 23%;
+  bottom: -40%;
+}
+.flame {
+  position: absolute;
+  width: 20%;
+  border-radius: 50% 50% 50% 0%  ;
+  transform: rotate(-45deg);
+}
+
+
+.red {
+  width: 50px;
+  height: 50px;
+  background: orangered;
+  box-shadow: 0px 0px 10px 5px orangered;
+}
+.orange {
+  left: 10px;
+  width: 30px;
+  height: 30px;
+  background: orange;
+  box-shadow: 0px 0px 12px 6px orange;
+}
+.gold {
+  left: 18px;
+  width: 15px;
+  height: 15px;
+  background: gold;
+  box-shadow: 0px 0px 9px 4px gold;
+}
+.white {
+  left: 22px;
+  width: 5px;
+  height: 5px;
+  background: lightyellow;
+  box-shadow: 0px 0px 9px 4px lightyellow;
+}
+.flame-anim {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  animation: flicker 3ms ease-in infinite;
+}
+
